Bug 1101182 - One interpose call for one property access. r=bholley